// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`[keychain/KeychainManager] :: should be able to add a read only wallet using an address 1`] = `
{
  "local": {
    "vault": "",
  },
  "session": {
    "encryptionKey": "",
    "salt": "",
  },
}
`;

exports[`[keychain/KeychainManager] :: should be able to add an account 1`] = `
{
  "local": {
    "vault": "",
  },
  "session": {
    "encryptionKey": "",
    "salt": "",
  },
}
`;

exports[`[keychain/KeychainManager] :: should be able to autodiscover accounts when importing a seed phrase 1`] = `
{
  "local": {
    "vault": "{\\"data\\":\\"eG/OEE2jXuDMsmRKl10zqlij8ibUWBQIiB4/kMix8XjZFiNjxBZABpcGq5/0tdLsC/paj6WYjNXtf2fcqO6/6Y0nJ5cvTzhJxZTmr8hgXMzEikZimVUd/m7QOjuZojDP3DBI3aCq4etsJ9jl/f29ZBasAwTOeOJ4K+D/HzOFvGRVhZVUEdrpOf3A/ABOxw8l9j2BuGbwAyVsgN0hFSvMnwNlR30PNy9qjaWp66D1ZLkUncIinUO8jRmD3fnWdYD/rkPQKVTG/x7KKGocn/ngclpyXXVweQ7XRZ8ka5mxpHyn13OrLEMLHeUDU9THMXxCZMdc4w4bOR4fEt3qy7SVJJzwtNCwhrqP0J4LpfzwteQxwt8Dyplom/tpW/QpADOar4xmlqjCQ8OrG59RaszGo1QWD5bl6Qljxz5XExlhhuBhwk/mOGvTUpxU9jAJZYotVIV8/WQv/uLCWSrTXxh9GliIDEth3IWAhH+AsUYkc9PhBux30q9j26JoueWd5Q==\\",\\"iv\\":\\"AAECAwQFBgcICQoLDA0ODw==\\",\\"salt\\":\\"AAECAwQFBgcICQoLDA0ODxAREhMUFRYXGBkaGxwdHh8=\\"}",
  },
  "session": {
    "encryptionKey": "{\\"key_ops\\":[\\"encrypt\\",\\"decrypt\\"],\\"ext\\":true,\\"kty\\":\\"oct\\",\\"k\\":\\"xBwW7Ghxj8m_0T2wIbWvt4dfTLbhDQJ5ynHnJMzlfls\\",\\"alg\\":\\"A256GCM\\"}",
    "salt": "AAECAwQFBgcICQoLDA0ODxAREhMUFRYXGBkaGxwdHh8=",
  },
}
`;

exports[`[keychain/KeychainManager] :: should be able to create an HD wallet 1`] = `
{
  "local": {
    "vault": "",
  },
  "session": {
    "encryptionKey": "",
    "salt": "",
  },
}
`;

exports[`[keychain/KeychainManager] :: should be able to export a private key for an account 1`] = `
{
  "local": {
    "vault": "",
  },
  "session": {
    "encryptionKey": "",
    "salt": "",
  },
}
`;

exports[`[keychain/KeychainManager] :: should be able to export the seed phrase for an HD wallet 1`] = `
{
  "local": {
    "vault": "",
  },
  "session": {
    "encryptionKey": "",
    "salt": "",
  },
}
`;

exports[`[keychain/KeychainManager] :: should be able to get the signer of a specific address 1`] = `
{
  "local": {
    "vault": "",
  },
  "session": {
    "encryptionKey": "",
    "salt": "",
  },
}
`;

exports[`[keychain/KeychainManager] :: should be able to import a wallet using a private key 1`] = `
{
  "local": {
    "vault": "",
  },
  "session": {
    "encryptionKey": "",
    "salt": "",
  },
}
`;

exports[`[keychain/KeychainManager] :: should be able to import a wallet using a seed phrase 1`] = `
{
  "local": {
    "vault": "",
  },
  "session": {
    "encryptionKey": "",
    "salt": "",
  },
}
`;

exports[`[keychain/KeychainManager] :: should be able to lock the vault 1`] = `
{
  "local": {
    "vault": "{\\"data\\":\\"eG/OEE2jXuDMsmRKl10zqlij8ibUWBQIiB4/kMix8XjZFiNjxBZABpcGq5/0tdLsC/paj6WYjNXtf2fcqO6/6Y0nJ5cvTzhJxZTmr8hgXMzEikZimVUd/m7QOjuZojDP3DBI3aCq4etsJ9jl/f29ZBasAwTOeOJ4K+D/HzOFvGRVhZVUEdrpOf3A/ABOxw8l9j2BuGbwAyVsgN0hFSvMnwNlR30PNy9qjaWp66D1ZLkUncIinUO8jRmD3Yghhd+WwsErHajIfyOTtxW2\\",\\"iv\\":\\"AAECAwQFBgcICQoLDA0ODw==\\",\\"salt\\":\\"AAECAwQFBgcICQoLDA0ODxAREhMUFRYXGBkaGxwdHh8=\\"}",
  },
  "session": {
    "encryptionKey": null,
    "salt": null,
  },
}
`;

exports[`[keychain/KeychainManager] :: should be able to remove an account from a KeyPair keychain... 1`] = `
{
  "local": {
    "vault": "",
  },
  "session": {
    "encryptionKey": "",
    "salt": "",
  },
}
`;

exports[`[keychain/KeychainManager] :: should be able to remove an account from a ReadOnly keychain... 1`] = `
{
  "local": {
    "vault": "",
  },
  "session": {
    "encryptionKey": "",
    "salt": "",
  },
}
`;

exports[`[keychain/KeychainManager] :: should be able to remove an account from an HD keychain... 1`] = `
{
  "local": {
    "vault": "",
  },
  "session": {
    "encryptionKey": "",
    "salt": "",
  },
}
`;

exports[`[keychain/KeychainManager] :: should be able to remove empty keychains 1`] = `
{
  "local": {
    "vault": "",
  },
  "session": {
    "encryptionKey": "",
    "salt": "",
  },
}
`;

exports[`[keychain/KeychainManager] :: should be able to unlock the vault 1`] = `
{
  "local": {
    "vault": "{\\"data\\":\\"eG/OEE2jXuDMsmRKl10zqlij8ibUWBQIiB4/kMix8XjZFiNjxBZABpcGq5/0tdLsC/paj6WYjNXtf2fcqO6/6Y0nJ5cvTzhJxZTmr8hgXMzEikZimVUd/m7QOjuZojDP3DBI3aCq4etsJ9jl/f29ZBasAwTOeOJ4K+D/HzOFvGRVhZVUEdrpOf3A/ABOxw8l9j2BuGbwAyVsgN0hFSvMnwNlR30PNy9qjaWp66D1ZLkUncIinUO8jRmD3Yghhd+WwsErHajIfyOTtxW2\\",\\"iv\\":\\"AAECAwQFBgcICQoLDA0ODw==\\",\\"salt\\":\\"AAECAwQFBgcICQoLDA0ODxAREhMUFRYXGBkaGxwdHh8=\\"}",
  },
  "session": {
    "encryptionKey": "{\\"key_ops\\":[\\"encrypt\\",\\"decrypt\\"],\\"ext\\":true,\\"kty\\":\\"oct\\",\\"k\\":\\"xBwW7Ghxj8m_0T2wIbWvt4dfTLbhDQJ5ynHnJMzlfls\\",\\"alg\\":\\"A256GCM\\"}",
    "salt": "AAECAwQFBgcICQoLDA0ODxAREhMUFRYXGBkaGxwdHh8=",
  },
}
`;

exports[`[keychain/KeychainManager] :: should be able to update the password of the vault 1`] = `
{
  "local": {
    "vault": "{\\"data\\":\\"eG/OEE2jXuDMsmRKl10zqlij8ibUWBQIiB4/kMix8XjZFiNjxBZABpcGq5/0tdLsC/paj6WYjNXtf2fcqO6/6Y0nJ5cvTzhJxZTmr8hgXMzEikZimVUd/m7QOjuZojDP3DBI3aCq4etsJ9jl/f29ZBasAwTOeOJ4K+D/HzOFvGRVhZVUEdrpOf3A/ABOxw8l9j2BuGbwAyVsgN0hFSvMnwNlR30PNy9qjaWp66D1ZLkUncIinUO8jRmD3Yghhd+WwsErHajIfyOTtxW2\\",\\"iv\\":\\"AAECAwQFBgcICQoLDA0ODw==\\",\\"salt\\":\\"AAECAwQFBgcICQoLDA0ODxAREhMUFRYXGBkaGxwdHh8=\\"}",
  },
  "session": {
    "encryptionKey": "{\\"key_ops\\":[\\"encrypt\\",\\"decrypt\\"],\\"ext\\":true,\\"kty\\":\\"oct\\",\\"k\\":\\"xBwW7Ghxj8m_0T2wIbWvt4dfTLbhDQJ5ynHnJMzlfls\\",\\"alg\\":\\"A256GCM\\"}",
    "salt": "AAECAwQFBgcICQoLDA0ODxAREhMUFRYXGBkaGxwdHh8=",
  },
}
`;
